--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env ENV_PROFILE=development nodemon index",
-    "start": "node index.js"
+    "start": "cross-env ENV_PROFILE=prod node index.js"
   },
   "keywords": [],
   "author": "",
