--- a/.env.prod
+++ b/.env.prod
@@ -2,5 +2,5 @@ NODE_ENV=prod
 PORT=3000
 CLIENT_ID=Ov23liYLtzFLNaAMmuPl
 CLIENT_SECRET=cb27f81d53289a6d9bfdcc46338572dbb2f4afea
-CALLBACK_URL=/auth/callback
+CALLBACK_URL=https://my-ltim-blogs.vercel.app/auth/callback
 ENV_PROFILE=prod
