--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 NODE_ENV=prod
-PORT=3000
+PORT=5000
 CLIENT_ID=Ov23liYLtzFLNaAMmuPl
 CLIENT_SECRET=cb27f81d53289a6d9bfdcc46338572dbb2f4afea
 CALLBACK_URL=https://my-ltim-blogs.vercel.app/auth/callback
 ENV_PROFILE=prod
+MONGODB_URI=mongodb://localhost:27017/my-ltim-blogs
